# video2slide_extractor

./: .gitignore  Dockerfile  README.md  compose.yaml  config.toml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  video2slide_extractor.py
.github/workflows/: docker_image.yaml
