[project]
name = "video2slide_extractor"
version = "0.1.0"
description = "動画からスライドを自動抽出するツール"
requires-python = ">=3.12"
dependencies = [
    "tomli>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto" 
